--- a/blog/resources/assets/css/homepage.css
+++ b/blog/resources/assets/css/homepage.css
@@ -29,7 +29,7 @@
 	display: block;
 	padding: 0 21px;
 }
-.menu li a:hover{
+.navbar-default .menu li a:hover{
 	color: #f4645f;
 	background: #fff;
 }
