--- a/blog/resources/assets/css/main-content.css
+++ b/blog/resources/assets/css/main-content.css
@@ -2,6 +2,9 @@
 	margin: 0px;
 	padding: 0px;
 }
+body{
+	background: #ebebeb;
+}
 .main-content{
 	width: 80%;
 	margin: 0 auto;
@@ -11,4 +14,84 @@
 }
 .main-content .right-content{
 	padding: 5 10px;
+}
+.link{
+	border: 1px solid #f4645f;
+	background: #f4645f;
+	transition: all 0.2s ease-in-out;
+	padding: 7px 14px;
+	border-radius: 2px;
+	text-decoration: none;
+	color: #fff;
+}
+.link:hover{
+	text-decoration: none;
+	background: #505050;
+	font-size: 14px;
+	color: rgba(255,255,255,1);
+}
+.panel .panel-heading .panel-footer .panel-body{
+	border: none;
+}
+/*
+article
+*/
+.article{
+	padding: 35px;
+	background: #fff;
+	margin-bottom: 30px;
+}
+.post-header{
+	height: 71px;
+	text-align: center;
+}
+.post-meta{
+	color: #959595;
+}
+.author a{
+	text-decoration: none;
+	color: #f4645f;
+}
+.author a:hover{
+	text-decoration: none;
+}
+.post-pic{
+	width: 80%;
+	margin: 30px auto;
+}
+.post-pic img{
+	width: 100%;
+	height: 344px;
+}
+.post-descripition{
+	width: 80%;
+	margin: 0px auto;
+	color: #808087;
+}
+.post-button{
+	width: 80%;
+	margin: 30px auto;
+}
+/*
+widget
+*/
+.widget{
+	background: #fff;
+	padding: 21px 30px;
+}
+.title{
+	margin-top: 0px;
+	padding-bottom: 7px;
+	border-bottom: 1px solid #ebebeb;
+	margin-bottom: 21px;
+	position: relative;
+}
+.title:after{
+	content: "";
+	width: 90px;
+	height: 1px;
+	background: #f4546f;
+	position: absolute;
+	left: 0px;
+	bottom: -1px;
 }
