--- a/blog/resources/assets/css/homepage.css
+++ b/blog/resources/assets/css/homepage.css
@@ -55,3 +55,22 @@
 		width:700px;
 	}
 }
+/*
+Footer
+*/
+.footer{
+	background: #333;
+	font-size: 15px;
+	text-align: center;
+	color: #555;
+	padding-top: 28px;
+	padding-bottom: 28px;
+	border-top: 1px solid #303030;
+}
+.outlink{
+	color: #555;
+}
+.outlink:hover{
+	text-decoration: none;
+	color: #f4645f;
+}
