--- a/blog/resources/assets/css/main-content.css
+++ b/blog/resources/assets/css/main-content.css
@@ -5,9 +5,17 @@
 body{
 	background: #ebebeb;
 }
-.main-content{
-	width: 90%;
-	margin: 0 auto;
+@media(min-width: 1200px){
+	.main-content{
+		width: 80%;
+		margin: 0 auto;
+	}
+}
+@media(max-width: 1200px){
+	.main-content{
+		width: 97%;
+		margin: 0 auto;
+	}
 }
 .main-content .left-content{
 	padding: 5 10px;
@@ -56,20 +64,20 @@ article
 	text-decoration: none;
 }
 .post-pic{
-	width: 90%;
+	width: 80%;
 	margin: 30px auto;
 }
 .post-pic img{
 	width: 100%;
-	height: 344px;
+	height: 360px;
 }
 .post-descripition{
-	width: 90%;
+	width: 80%;
 	margin: 0px auto;
 	color: #808087;
 }
 .post-button{
-	width: 90%;
+	width: 80%;
 	margin: 30px auto;
 }
 /*
