--- a/blog/resources/assets/css/main-content.css
+++ b/blog/resources/assets/css/main-content.css
@@ -5,18 +5,6 @@
 body{
 	background: #ebebeb;
 }
-@media(min-width: 1200px){
-	.main-content{
-		width: 80%;
-		margin: 0 auto;
-	}
-}
-@media(max-width: 1200px){
-	.main-content{
-		width: 97%;
-		margin: 0 auto;
-	}
-}
 .main-content .left-content{
 	padding: 5 10px;
 }
@@ -107,7 +95,7 @@ widget
 footer
 */
 .post-footer{
-	width: 90%;
+	width: 80%;
 	margin: 0px auto;
 	margin-top: 30px;
 	border-top: 1px solid #ebebeb;
@@ -116,4 +104,25 @@ footer
 .pull-left{
 	color: #959595;
 	line-height: 28px;
+}
+.outlink{
+	cursor: pointer;
+}
+/*
+media
+*/
+@media(min-width: 1200px){
+	.main-content{
+		width: 80%;
+		margin: 0 auto;
+	}
+	.post-pic img{
+		height: 400px;
+	}
+}
+@media(max-width: 1200px){
+	.main-content{
+		width: 97%;
+		margin: 0 auto;
+	}
 }
