--- a/blog/resources/assets/css/main-content.css
+++ b/blog/resources/assets/css/main-content.css
@@ -91,6 +91,25 @@ widget
 	left: 0px;
 	bottom: -1px;
 }
+.widget li{
+	list-style: none;
+}
+.tag-link{
+	display: inline-block;
+	border: 1px solid #f1362f;
+	width: 86px;
+	line-height: 36px;
+	margin: 5px 2px;
+	text-align: center;
+	background: #f4645f;
+	color: #fff;
+	transition:  all 0.3s ease-in-out;
+}
+.tag-link:hover{
+	text-decoration: none;
+	background: rgba(0,0,0,0.7);
+	color: #fff;
+}
 /*
 footer
 */
@@ -124,5 +143,10 @@ media
 	.main-content{
 		width: 97%;
 		margin: 0 auto;
+	}
+}
+@media(max-width: 982px){
+	.tag-link{
+		width: 100%;
 	}
 }
